SERVER-38302 update prepared commit/abort metrics before call to opObserver